# obs-amf

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
dependencies/include/AMF/components/: Ambisonic2SRenderer.h  AudioCapture.h  Capture.h  ChromaKey.h  ColorSpace.h  Component.h  ComponentCaps.h  CursorCapture.h  DisplayCapture.h  FFMPEGAudioConverter.h  FFMPEGAudioDecoder.h  FFMPEGAudioEncoder.h  FFMPEGComponents.h  FFMPEGFileDemuxer.h  FFMPEGFileMuxer.h  FFMPEGVideoDecoder.h  MediaSource.h  PreAnalysis.h  PreProcessing.h  VideoCapture.h  VideoConverter.h  VideoDecoderUVD.h  VideoEncoderHEVC.h  VideoEncoderVCE.h  VideoStitch.h  ZCamLiveStream.h
dependencies/include/AMF/core/: AudioBuffer.h  Buffer.h  Compute.h  ComputeFactory.h  Context.h  CurrentTime.h  D3D12AMF.h  Data.h  Debug.h  Dump.h  Factory.h  Interface.h  Plane.h  Platform.h  PropertyStorage.h  PropertyStorageEx.h  Result.h  Surface.h  Trace.h  Variant.h  Version.h  VulkanAMF.h
source/: amf.cpp  amf.h  encoder.cpp  encoder.h  encoder_avc.cpp  encoder_avc.h  encoder_details.h  encoder_details_avc.cpp  encoder_details_hevc.cpp  encoder_hevc.cpp  encoder_hevc.h  gsl.h  module.cpp  module.h  plugin.cpp  settings.cpp  settings.h  texture_encoder.cpp  texture_encoder.h  util.cpp  util.h  windows.h
